--- a/dc-metro-map/public/stylesheets/style.css
+++ b/dc-metro-map/public/stylesheets/style.css
@@ -3,6 +3,9 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+
+
 a {
-  color: #00B7FF;
+  //color: #00B7FF;
+  color: #00B7F0;
 }
